--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "paypal/rest-api-sdk-php" : "1.5.1"
+        "paypal/rest-api-sdk-php" : "1.14.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
